# Cplpl_tasks_pyp

./: 01_cin_cout+.cpp  01_cin_cout_namespace+.cpp  01_cin_cout_using+.cpp  02_type_ranges_int+.cpp  03_type_ranges_float+.cpp  04_arithm_operations+.cpp  05_bool_logic+.cpp  06_if+.cpp  07_switch+.cpp  08_while_do_loop+.cpp  09_for_loop+.cpp  10_arrays_pointers+.cpp  10_file_io+.cpp  CMakeLists.txt  README.md  example.cpp  game.cpp  hello_world.cpp  input_user_value.cpp  input_user_value.h  logs.txt  main.cpp  move_me_out.cpp  records_file.cpp  records_file.h  set_value.cpp  set_value.h
